--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <title>Music Box</title>
+    <style>
+        html,body{width:100%; height:100%; display: block;}
+        *{padding:0;margin:0; border:0;}
+        canvas { display: block; }
+    </style>
+	<script src="https://cdn.tiaotiaotang.net/statics/common/js/p5.min.js"></script>
+	<script src="https://cdn.tiaotiaotang.net/statics/common/js/p5.sound.min.js"></script>
+	<script src="https://cdn.tiaotiaotang.net/statics/sketch/Basic.js"></script>
+	<script src="sketch/Rect.js"></script>
+</head>
+<body>
+	<div id="viewport"></div>
+</body>
+<script>
+    var root = false;
+    var firstRect = false;
+    var startTime = new Date().getTime();
+    var globalScale = 0;
+    var pork;
+    var fBox;
+    var current = [];
+
+    var playing = false;
+
+    var soundFile;
+    var fft;
+    function preload() {
+        soundFormats('mp3', 'ogg');
+        soundFile = loadSound('https://cdn.tiaotiaotang.net/statics/media/music');
+    }
+    function canvasPress(){
+        if(!playing){
+            soundFile.play();
+            playing = true;
+        }else{
+            soundFile.stop()
+            playing = false;
+        }
+    }
+    function setup() {
+        fft = new p5.FFT();
+        soundFile.amp(0.2);
+        var w = window.innerWidth;
+        var h = window.innerHeight;
+        var canvas = createCanvas(w,h,WEBGL);
+        for(var i = 0 ; i < 128 ; i ++){
+            current.push(0);
+        }
+        smooth(8)
+        fBox = new FancyBox();
+        fBox.create();
+    }
+    function touchStarted(){
+        canvasPress();
+    }
+    function draw(){
+        var spectrum = fft.analyze();
+        var barWidth = width * 1.0/128;
+        background(255);
+        strokeWeight(1)
+        
+        for(var i = 0 ; i < 128 ; i ++){
+            var sum = 0;
+            sum += spectrum[i] * 0.2
+            if(current[i] > sum){
+                var c = (current[i] - sum) * 0.09
+                current[i] = current[i] - c
+            }else{
+                current[i] = sum
+            }
+            fill(color(13,127,190),map(current[i]*height*3,0,50,0,255))
+            push()
+            translate(0,height / 2);
+            rect(i*barWidth - width / 2, height, barWidth, map(-current[i]*3,0,100,0,200))
+            rect(i*barWidth - width / 2, 0, barWidth, map(-current[i]*3,0,100,0,200))
+            pop()
+        }
+        fBox.display(current);
+    }
+</script>
+</html>
