--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         *{padding:0;margin:0; border:0;}
         canvas { display: block; }
     </style>
-	<script src="https://cdn.tiaotiaotang.net/statics/common/js/p5.min.js"></script>
-	<script src="https://cdn.tiaotiaotang.net/statics/common/js/p5.sound.min.js"></script>
-	<script src="https://cdn.tiaotiaotang.net/statics/sketch/Basic.js"></script>
+	<script src="libs/p5.min.js"></script>
+	<script src="libs/p5.sound.min.js"></script>
+	<script src="sketch/Basic.js"></script>
 	<script src="sketch/Rect.js"></script>
 </head>
 <body>
@@ -33,7 +33,7 @@
     var fft;
     function preload() {
         soundFormats('mp3', 'ogg');
-        soundFile = loadSound('https://cdn.tiaotiaotang.net/statics/media/music');
+        soundFile = loadSound('media/music');
     }
     function canvasPress(){
         if(!playing){
